# sci-phi

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  processed_pdfs.db  pyproject.toml
docs/: openapi.yaml
fastapi_app/: .cursorignore  .gitignore  README.md  TEXT_PROCESSING_CONFIG.md  config.py  conversion_service.py  converter.py  database.py  extraction_service.py  main.py  models.py  processed_pdfs.db  processor.py  requirements.txt  start_dev.py  uvicorn_config.py
fastapi_app/llm/: __init__.py  context_utils.py  llm.py  questions.py  summarize.py
streamlit_app/: main.py  requirements.txt
tests/: test_api.py  test_config.py
